# faq_bot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: bot.py  config.py  handlers.py  main.py
app/bot/: instance.py  storage.py
app/bot/middlewares/: __init__.py  access.py  admin_access.py  rate_limit.py
app/core/: __init__.py  commands.py  config.py  exceptions.py  logging.py  requests.py
app/core/constants/: custom.py  dirs.py  emoji.py  emojis.py  files.py
app/core/customization/: commands.py  formatter.py  messages.py
app/core/logging/: filter.py  setup.py  throttler.py
app/core/messages/: messages.py
app/dialogs/: actions.py
app/dialogs/markups/: question.py  ticket.py  user.py
app/dialogs/rows/: base.py  question.py  settings.py  ticket.py  user.py
app/dialogs/send/: base.py  common.py  question.py  root.py  settings.py  ticket.py  user.py
app/handlers/: __init__.py  common.py  root.py
app/handlers/admin/: __init__.py  ban_cmd.py  error_cmd.py  goto.py  state.py  state_cmd.py
app/handlers/public/: __init__.py  ask.py  ask_cmd.py  errors.py  start.py  start_cmd.py
app/handlers/responder/: __init__.py
app/handlers/settings/: root.py
app/repositories/: __init__.py  questions.py  tickets.py  users.py
app/services/: notification.py
app/services/common/: process.py  validate.py
app/services/question/: client.py  embedding.py  process.py  sdk_instance.py  service.py  validate.py
app/services/ticket/: service.py  validate.py
app/services/user/: admin_sync.py  process.py  service.py  validate.py
app/storage/: core.py  engine.py  init.py  instance.py  schema_sync.py  temp.py
app/storage/db/: engine.py
app/storage/models/: __init__.py  question.py  ticket.py  (+1 more)
app/utils/: config.py
config/: commands.yml  logging.dev.yml  logging.prod.yml  messages.example.yml  messages.fincubes.yml  messages.yml  requests.yandex.yml
docs/: architecture.md  commands.md  messages.md  setup-and-configuration.md
(+51 files in other folders)
