[tool.poetry]
name = "faq_bot"
version = "0.1.0"
description = ""
authors = ["artrubadur"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12"
aiogram = {version = "^3.23.0", python = ">=3.12,<3.15"}
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"