[tool.poetry]
name = "faq_bot"
version = "0.1.0"
description = ""
authors = ["artrubadur"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
aiogram = {version = "^3.23.0", python = ">=3.13,<3.15"}
python-dotenv = "^1.2.1"
sqlalchemy = "^2.0.45"
pgvector = "^0.4.2"
asyncpg = "^0.31.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
